--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "Toivo",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.6",
-    "mysql": "^2.18.1",
     "nodejs-websocket": "^1.7.2",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
@@ -23,7 +23,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
