--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Toivo",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.3",
     "@reduxjs/toolkit": "^1.5.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "file-system": "^2.2.2",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.6",
     "nodejs-websocket": "^1.7.2",
